<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/camera_permission_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/allow_camera_permission_notice"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/allow_camera_permission_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:background="@drawable/rounded_button"
            android:text="@string/allow"
            android:textColor="@color/white"
            android:textSize="18sp">

        </Button>

    </LinearLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        app:implementationMode="performance"
        app:scaleType="fitCenter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" >

            <ImageView
                android:id="@+id/depth_preview_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/depth_preview_image_description" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/enable_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginVertical="5dp"
                android:buttonTint="@color/white"
                android:contentDescription="@string/enable_flashlight_description"
                android:text="@string/enable_flashlight"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/performance_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text=""
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>